# speedstats

./: .gitignore  pyproject.toml  requirements.txt  setup.cfg
.github/: .gitignore  mergify.yml
docs/: README.md  speedtest.help
speedstats/: app.py  user.py
speedstats/db/: speedstats.sql  table.py
speedstats/helpers/: linux_mac.py  parser.py  request.py  user.py
speedstats/tests/: user_test.py
